enum MinMaxPosition {
  Min = 'min',
  Max = 'max',
}

export default MinMaxPosition;
