interface IPoint {
    position: number;
    value: string;
    withTooltip: boolean;
}

export default IPoint;
